src/objects/QB_Sales_Invoice_Header__c.object
<CustomObject>
    <description>Sales Invoice Header - Created upon upload of QB Invoice Files using ClickLink Rule</description>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IR2_Customer__c</fullName>
        <formula>IF(Left( Customer__c ,8)=&quot;BGE Home&quot;,&quot;BGE Home&quot;,Customer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLines__c</fullName>
        <label>NumberofLines</label>
        <summaryForeignKey>QB_Invoice_File__c.QB_Sales_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Number__c</fullName>
        <description>QB Invoice Number</description>
        <label>Ref Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrnDate__c</fullName>
        <label>TrnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrxID__c</fullName>
        <description>Used for Cash Matching</description>
        <label>TrxID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>QB Sales Invoice Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Due_Date__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <columns>Ref_Number__c</columns>
        <columns>TrnDate__c</columns>
        <columns>TrxID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>IR2_Customer__c</columns>
        <columns>Processed__c</columns>
        <columns>Ref_Number__c</columns>
        <columns>TrnDate__c</columns>
        <columns>Due_Date__c</columns>
        <columns>TrxID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unprocessed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BGE_Unprocessed_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Ref_Number__c</columns>
        <columns>TrnDate__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Customer__c</field>
            <operation>contains</operation>
            <value>BGE Home</value>
        </filters>
        <label>BGE Unprocessed Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Due_Date__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <columns>Ref_Number__c</columns>
        <columns>TrnDate__c</columns>
        <columns>TrxID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Customer__c</field>
            <operation>notContain</operation>
            <value>BGE</value>
        </filters>
        <label>Unprocessed - Not BGE</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SIH-{00000000}</displayFormat>
        <label>QB Sales Invoice Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Sales Invoice Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>